--- a/src/main/resources/config/en.yml
+++ b/src/main/resources/config/en.yml
@@ -6,7 +6,7 @@ ConfigVersion: ${project.version}
 
 # Bot token; don't know what this is? Look at the video on the plugin page for instructions
 # You must restart your server after changing this option
-BotToken: "BOTTOKEN"
+BotToken: OTcwNzczNzkwMjg2MDMyOTQ2.YnA1iw.bkuZ9cTSX2_UYdHDhlR-paaalK4
 
 # Channel links from game to Discord
 # syntax is Channels: {"in-game channel name from Minecraft": "numerical channel ID from Discord", "another in-game channel name from Minecraft": "another numerical channel ID from Discord"}
@@ -26,10 +26,10 @@ BotToken: "BOTTOKEN"
 #
 # The first part of channel pairs is not the Discord channel name!
 # Run "/discord reload" after changing this option to apply
-Channels: {"global": "000000000000000000"}
+Channels: {"global": "970786576940531723"}
 
 # Console channel numerical ID (NOT NAME), leave blank to disable the console channel all together
-DiscordConsoleChannelId: "000000000000000000"
+DiscordConsoleChannelId: "922956852797534228"
 
 # Invitation link shown to players when using /discord and on the message shown to unlinked players when linking is enforced
 DiscordInviteLink: "https://discord.gg/changethisintheconfig.yml"
@@ -76,10 +76,10 @@ Experiment_JdbcUsername: "username"
 Experiment_JdbcPassword: "password"
 
 # Webhook Delivery
-Experiment_WebhookChatMessageDelivery: false
+Experiment_WebhookChatMessageDelivery: true
 Experiment_WebhookChatMessageUsernameFormat: "%displayname%"
 Experiment_WebhookChatMessageFormat: "%message%"
-Experiment_WebhookChatMessageUsernameFromDiscord: false
+Experiment_WebhookChatMessageUsernameFromDiscord: true
 Experiment_WebhookChatMessageAvatarFromDiscord: false
 
 # Embed & webhook image/avatar url format
